-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 21.0.5, 21.0.5-oracle, 23, 24
-
Component/s: hotspot
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8335423 | 23.0.1 | Vladimir Kozlov | P3 | Resolved | Fixed | b02 |
| JDK-8335275 | 23 | Vladimir Kozlov | P3 | Resolved | Fixed | b30 |
| JDK-8335353 | 21.0.5-oracle | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
| JDK-8335326 | 21.0.5 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S27961/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/92ce879a-aa7f-4da0-b681-ca2cd1754fa5/runs/d309a027-e69b-43a8-b3a3-b24fc4d77194/workspace/open/src/hotspot/share/opto/macro.cpp:1955), pid=1742462, tid=1750740
# assert(!oldbox->is_unbalanced()) failed: this should not be called for unbalanced region
#
# JRE version: Java(TM) SE Runtime Environment (23.0+26) (fastdebug build 23-ea+26-2269)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-ea+26-2269, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x1145e3c] PhaseMacroExpand::mark_eliminated_box(Node*, Node*)+0x93c
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S6402/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/96097c2c-ed26-4737-a4d7-5ffec0d18fbc/runs/2906419d-5aff-400b-82af-aa1027154d46/testoutput/test-support/jck_runtime_api_java_util/core.1742462)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: --enable-preview -Djava.awt.headless=true -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -XX:+EnableDynamicAgentLoading -Djdk.attach.allowAttachSelf=true -Djava.security.properties=/opt/mach5/mesos/work_dir/jib-master/install/jck/23/b12/extra/bundles/JCK-extra-23.zip/JCK-extra-23/extra.security.properties -XX:MaxRAMPercentage=6.25 -Djava.security.policy=/opt/mach5/mesos/work_dir/jib-master/install/jck/23/b12/bundles/JCK-runtime-23.jar/JCK-runtime-23/lib/jck.policy com.sun.jck.lib.multijvm.group.wrapper.ActiveMain -id 6 -host 100.103.48.193 -port 42419 -idleTimeout 1200000 -testTimeout 6000000
Host: ol9-aarch64-770816, AArch64, 8 cores, 30G, Oracle Linux Server release 9.3
Time: Tue Jun 11 07:28:06 2024 UTC elapsed time: 1766.605202 seconds (0d 0h 29m 26s)
--------------- T H R E A D ---------------
Current thread (0x0000ffff49fd8db0): JavaThread "C2 CompilerThread2" daemon [_thread_in_native, id=1750740, stack(0x0000fffefeb84000,0x0000fffefed82000) (2040K)]
Current CompileTask:
C2:1766605 60172 % javasoft.sqe.tests.api.java.util.Vector.SetSizeTests::Vector2034 @ 353 (499 bytes)
Stack: [0x0000fffefeb84000,0x0000fffefed82000], sp=0x0000fffefed7cb70, free space=2018k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1145e3c] PhaseMacroExpand::mark_eliminated_box(Node*, Node*)+0x93c (macro.cpp:1955)
V [libjvm.so+0x1146110] PhaseMacroExpand::mark_eliminated_locking_nodes(AbstractLockNode*)+0x250
V [libjvm.so+0x114cc58] PhaseMacroExpand::eliminate_macro_nodes()+0xe8
V [libjvm.so+0x8cd900] Compile::Optimize()+0x7f0
V [libjvm.so+0x8d07d8] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1484
V [libjvm.so+0x72cd80] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x17c
V [libjvm.so+0x8dc4ec] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x7cc
V [libjvm.so+0x8dd034] CompileBroker::compiler_thread_loop()+0x514
V [libjvm.so+0xd3fd0c] JavaThread::thread_main_inner()+0xcc
V [libjvm.so+0x15a3320] Thread::call_run()+0xac
V [libjvm.so+0x12f9d44] thread_native_entry(Thread*)+0x130
C [libc.so.6+0x806b8] start_thread+0x2d8
Registers:
- backported by
-
JDK-8335275 assert(!oldbox->is_unbalanced()) failed: this should not be called for unbalanced region
-
- Resolved
-
-
JDK-8335326 assert(!oldbox->is_unbalanced()) failed: this should not be called for unbalanced region
-
- Resolved
-
-
JDK-8335353 assert(!oldbox->is_unbalanced()) failed: this should not be called for unbalanced region
-
- Resolved
-
-
JDK-8335423 assert(!oldbox->is_unbalanced()) failed: this should not be called for unbalanced region
-
- Resolved
-
- relates to
-
JDK-8324969 C2: prevent elimination of unbalanced coarsened locking regions
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/15462799
-
Commit
openjdk/jdk/9c89f086
-
Commit
openjdk/jdk/62d0ee9c
-
Review
openjdk/jdk21u-dev/795
-
Review
openjdk/jdk/19870
-
Review
openjdk/jdk/19931