8334421: assert(!oldbox->is_unbalanced()) failed: this should not be called for unbalanced region